tests/sources/invalid/types/field_access_on_primitive.fire
// Semantic error: field access on a non-class (primitive) type.

fn field_access_on_primitive() -> void {
    x: int32 = 5;
    y: int32 = x.bits;  //~ ERROR FS-SEM-0010 @18
}
